--- a/templates/prastuti/schedule.html
+++ b/templates/prastuti/schedule.html
@@ -94,6 +94,9 @@
             <li>
               <a href="https://drive.google.com/file/d/1No_Bepk5-02QI_Ya2rDlL_yJZ0DrRvqX/view?usp=sharing" target="_blank">Cryptographic Maths</a>
             </li>
+            <li>
+              <a href="https://drive.google.com/file/d/1wnedsJDiVys1uPBYAMK3L_hdkoUSOOsG/view?usp=sharing" target="_blank">Cipher Techniques</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -102,8 +105,8 @@
           <div class="up_workshop">Upcoming workshops</div>
           <ul>
             <li>
-              <a href="https://bit.ly/cryptX" target="_blank">Cipher Techniques</a><br />
-              <small><cite>March 11 | 6:30PM - 8:30PM</cite></small>
+              <a href="https://bit.ly/cryptX" target="_blank">Asymmetric Cryptography</a><br />
+              <small><cite>March 14 | 11:00PM - 12:30PM</cite></small>
             </li>
           </ul>
         </div>
@@ -195,6 +198,9 @@
             <li>
               <a href="https://drive.google.com/file/d/1-2fKVM-yl5dCxQUb3m16V9lIHUV2_-TQ/view?usp=sharing" target="_blank">Basics of Power Electronics</a>
             </li>
+            <li>
+              <a href="https://drive.google.com/file/d/1Vi0zUn65cklZk392O8Cld67CpBizxd1H/view?usp=sharing" target="_blank">Converter Inverter 3-phase Rectifier</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -203,8 +209,8 @@
           <div class="up_workshop">Upcoming workshops</div>
           <ul>
             <li>
-              <a href="#" target="_blank">Converter Inverter 3-phase Rectifier</a><br />
-              <small><cite>March 11 | 2:00PM - 3:30PM </cite></small>
+              <a href="#" target="_blank">No More Workshops</a><br />
+              <small><cite></cite></small>
             </li>
           </ul>
         </div>
@@ -247,7 +253,7 @@
               <a href="https://drive.google.com/file/d/1yFlRof8rRxg-KFCAI0XAGVmu8aRy6oOI/view?usp=sharing" target="_blank">Introduction to Proteus Software and Sequential circuits</a>
             </li>
             <li>
-              <a href="#" target="_blank">Types of Flip Flops</a>
+              <a href="https://drive.google.com/file/d/1FiuTHo5ACAr87JXTlmlUuHo7Hrw6XAyI/view?usp=sharing" target="_blank">Types of Flip Flops</a>
             </li>
           </ul>
         </div>
@@ -257,7 +263,7 @@
           <div class="up_workshop">Upcoming workshops</div>
           <ul>
             <li>
-              <a href="https://bit.ly/2Np8uTN" target="_blank">Counters & Shift Registers</a><br />
+              <a href="https://bit.ly/2Np8uTN" target="_blank">Finite State Machine</a><br />
               <small><cite>March 12 | 6:30PM - 8:00PM</cite></small>
             </li>
           </ul>
