--- a/templates/events/simulim.html
+++ b/templates/events/simulim.html
@@ -60,6 +60,13 @@
               diode with the simulation of them in MATLAB using SIMULINK
             </p>
           </li>
+          <li>
+            <a href="https://drive.google.com/drive/folders/1mtiM4HOISqXPliVHVzFvXvntjkpT1JnC" target="_blank" class="workshop_link">
+              <h4 style="font-family: 'Russo One', sans-serif;">Converter, Inverter & 3-phase Rectifiers</h4>
+            </a>
+            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">
+            </p>
+          </li>
         </ol>
 
       </div>
