--- a/templates/events/cryptx.html
+++ b/templates/events/cryptx.html
@@ -71,6 +71,21 @@
               Modular Arithmetic,  Fermat’s Little Theorem, Euler’s Totient Function, Modulo Multiplicative Inverse
             </p>
           </li>
+          <li>
+            <a href="https://drive.google.com/drive/folders/1lKEjrfVO85Nmm7fi7K0CraM1-cUjGYBj" target="_blank" class="workshop_link">
+              <h4 style="font-family: 'Russo One', sans-serif;">Cipher Techniques</h4>
+            </a>
+            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">Weaknesses of Caesar Cipher, One-Time Pads and its weaknesses,
+              Symmetric Cryptography, Block Cipher, Stream Cipher, Advanced Encryption Standard (AES)
+            </p>
+          </li>
+          <li>
+            <a href="#" target="_blank" class="workshop_link">
+              <h4 style="font-family: 'Russo One', sans-serif;">Asymmetric Cryptography</h4>
+            </a>
+            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">
+            </p>
+          </li>
         </ol>
 
       </div>
