--- a/templates/events/recognizance.html
+++ b/templates/events/recognizance.html
@@ -70,7 +70,7 @@
             </p>
           </li>
           <li>
-            <a href="#" target="_blank" class="workshop_link">
+            <a href="https://drive.google.com/drive/folders/1ONLulYVhQBhfzFcQWdguEySQHOO4DYm9" target="_blank" class="workshop_link">
               <h4 style="font-family: 'Russo One', sans-serif;">Machine Learning Algorithms</h4>
             </a>
             <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">We would be Introducing you to machine 
@@ -80,7 +80,7 @@
             </p>
           </li>
           <li>
-            <a href="#" target="_blank" class="workshop_link">
+            <a href="https://whimsical.com/recognizance-workshop-3-material-GTkjrCsdzr8Qk149jpUcPr" target="_blank" class="workshop_link">
               <h4 style="font-family: 'Russo One', sans-serif;">Introduction to Neural Networks</h4>
             </a>
             <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">With the advent of these powerful 
