--- a/templates/events/consilium.html
+++ b/templates/events/consilium.html
@@ -67,6 +67,20 @@
             <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">
             </p>
           </li>
+          <li>
+            <a href="https://drive.google.com/drive/u/0/folders/1hPEVIV3Cj1I59mLfbEaf4iPLNaB0A7vQ" target="_blank" class="workshop_link">
+              <h4 style="font-family: 'Russo One', sans-serif;">Types of Flip Flops</h4>
+            </a>
+            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">
+            </p>
+          </li>
+          <li>
+            <a href="#" target="_blank" class="workshop_link">
+              <h4 style="font-family: 'Russo One', sans-serif;">Finite State Machine</h4>
+            </a>
+            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">
+            </p>
+          </li>
         </ol>
 
       </div>
