--- a/templates/prastuti/schedule.html
+++ b/templates/prastuti/schedule.html
@@ -95,7 +95,7 @@
               <a href="https://drive.google.com/file/d/1No_Bepk5-02QI_Ya2rDlL_yJZ0DrRvqX/view?usp=sharing" target="_blank">Cryptographic Maths</a>
             </li>
             <li>
-              <a href="https://drive.google.com/file/d/1wnedsJDiVys1uPBYAMK3L_hdkoUSOOsG/view?usp=sharing" target="_blank">Cipher Techniques</a>
+              <a href="https://drive.google.com/file/d/1wnedsJDiVys1uPBYAMK3L_hdkoUSOOsG/view?usp=sharing" target="_blank">Symmetric Cryptography</a>
             </li>
           </ul>
         </div>
@@ -106,7 +106,7 @@
           <ul>
             <li>
               <a href="https://bit.ly/cryptX" target="_blank">Asymmetric Cryptography</a><br />
-              <small><cite>March 14 | 11:00PM - 12:30PM</cite></small>
+              <small><cite>March 14 | 11:00AM - 12:30PM</cite></small>
             </li>
           </ul>
         </div>
@@ -255,6 +255,9 @@
             <li>
               <a href="https://drive.google.com/file/d/1FiuTHo5ACAr87JXTlmlUuHo7Hrw6XAyI/view?usp=sharing" target="_blank">Types of Flip Flops</a>
             </li>
+            <li>
+              <a href="#" target="_blank">Finite State Machine</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -263,8 +266,8 @@
           <div class="up_workshop">Upcoming workshops</div>
           <ul>
             <li>
-              <a href="https://bit.ly/2Np8uTN" target="_blank">Finite State Machine</a><br />
-              <small><cite>March 12 | 6:30PM - 8:00PM</cite></small>
+              <a href="https://bit.ly/2Np8uTN" target="_blank">No more workshops</a><br />
+              <small><cite></cite></small>
             </li>
           </ul>
         </div>
