--- a/templates/events/cryptx.html
+++ b/templates/events/cryptx.html
@@ -73,7 +73,7 @@
           </li>
           <li>
             <a href="https://drive.google.com/drive/folders/1lKEjrfVO85Nmm7fi7K0CraM1-cUjGYBj" target="_blank" class="workshop_link">
-              <h4 style="font-family: 'Russo One', sans-serif;">Cipher Techniques</h4>
+              <h4 style="font-family: 'Russo One', sans-serif;">Symmetric Cryptography</h4>
             </a>
             <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">Weaknesses of Caesar Cipher, One-Time Pads and its weaknesses,
               Symmetric Cryptography, Block Cipher, Stream Cipher, Advanced Encryption Standard (AES)
