--- a/templates/events/simulim.html
+++ b/templates/events/simulim.html
@@ -64,7 +64,8 @@
             <a href="https://drive.google.com/drive/folders/1mtiM4HOISqXPliVHVzFvXvntjkpT1JnC" target="_blank" class="workshop_link">
               <h4 style="font-family: 'Russo One', sans-serif;">Converter, Inverter & 3-phase Rectifiers</h4>
             </a>
-            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">
+            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">This workshop focuses on 3-phase systems and different types
+              of rectifiers and controlled rectifiers. Also it discusses different DC-DC rectifiers , their uses and importance along with MOSFET.
             </p>
           </li>
         </ol>
