--- a/templates/events/consilium.html
+++ b/templates/events/consilium.html
@@ -64,21 +64,21 @@
             <a href="https://drive.google.com/drive/u/0/folders/14s4wzCF6UBoqB0Gge8ReuD4GGDYmMMVL" target="_blank" class="workshop_link">
               <h4 style="font-family: 'Russo One', sans-serif;">Intro to Proteus and Sequential Circuits</h4>
             </a>
-            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">
+            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">SR latch using NOR and NAND, Gated SR latch, Introduction to flips flops and Proteus simulations
             </p>
           </li>
           <li>
             <a href="https://drive.google.com/drive/u/0/folders/1hPEVIV3Cj1I59mLfbEaf4iPLNaB0A7vQ" target="_blank" class="workshop_link">
               <h4 style="font-family: 'Russo One', sans-serif;">Types of Flip Flops</h4>
             </a>
-            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">
+            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">SR flip flop, D flip flop, JK flip flop, T flip flop and conversion of one flip flop to other
             </p>
           </li>
           <li>
             <a href="#" target="_blank" class="workshop_link">
               <h4 style="font-family: 'Russo One', sans-serif;">Finite State Machine</h4>
             </a>
-            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">
+            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">Finite State Machines, Mealy and Moore State Machine, State reduction and Counters
             </p>
           </li>
         </ol>
