--- a/templates/events/cryptx.html
+++ b/templates/events/cryptx.html
@@ -83,7 +83,7 @@
             <a href="#" target="_blank" class="workshop_link">
               <h4 style="font-family: 'Russo One', sans-serif;">Asymmetric Cryptography</h4>
             </a>
-            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">
+            <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">RSA, Cryptocurrency and Encryption types
             </p>
           </li>
         </ol>
