--- a/templates/prastuti/schedule.html
+++ b/templates/prastuti/schedule.html
@@ -97,6 +97,9 @@
             <li>
               <a href="https://drive.google.com/file/d/1wnedsJDiVys1uPBYAMK3L_hdkoUSOOsG/view?usp=sharing" target="_blank">Symmetric Cryptography</a>
             </li>
+            <li>
+              <a href="#" target="_blank">Asymmetric Cryptography</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -105,8 +108,8 @@
           <div class="up_workshop">Upcoming workshops</div>
           <ul>
             <li>
-              <a href="https://bit.ly/cryptX" target="_blank">Asymmetric Cryptography</a><br />
-              <small><cite>March 15 | 11:00AM - 12:30PM</cite></small>
+              <a href="https://bit.ly/cryptX" target="_blank">No more workshops</a><br />
+              <small><cite></cite></small>
             </li>
           </ul>
         </div>
@@ -151,6 +154,9 @@
             <li>
               <a href="https://drive.google.com/file/d/16gxVxV6v9X6mZbgBsjE7ADfoDj_h62YQ/view?usp=sharing" target="_blank">Introduction to Neural Networks</a>
             </li>
+            <li>
+              <a href="#" target="_blank">Dwelling into Deep Learning</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -159,8 +165,8 @@
           <div class="up_workshop">Upcoming workshops</div>
           <ul>
             <li>
-              <a href="" target="_blank">Dwelling into Deep Learning</a><br />
-              <small><cite>March 13 | 11:00AM - 1:00PM</cite></small>
+              <a href="" target="_blank">No more workshops</a><br />
+              <small><cite></cite></small>
             </li>
           </ul>
         </div>
