--- a/templates/prastuti/schedule.html
+++ b/templates/prastuti/schedule.html
@@ -23,7 +23,7 @@
                 <h3><b> Codigo </b></h3>
               </div>
             </li>
-            <span class="time" aria-hidden="true">Event date to be announced</span>
+            <span class="time" aria-hidden="true">2 Contests - 19th March (7PM-10PM) & 20th March (7PM-10PM) </span>
           </ul>
         </div>
       </div>
@@ -77,7 +77,7 @@
                 <h3><b> CryptX </b></h3>
               </div>
             </li>
-            <span class="time" aria-hidden="true">Event date to be announced</span>
+            <span class="time" aria-hidden="true">MCQ round - 18th March (6PM-7PM) & PS round - 20th March 10PM to 21st March 10PM</span>
           </ul>
         </div>
       </div>
@@ -134,7 +134,7 @@
                 <h3><b> RECOGNIZANCE </b></h3>
               </div>
             </li>
-            <span class="time" aria-hidden="true">Event date to be announced</span>
+            <span class="time" aria-hidden="true">Round 1 - 17th March 10AM to 18th March 11:59PM & Round 2 - 19th March 10AM to 20th March 11:59PM</span>
           </ul>
         </div>
       </div>
@@ -190,7 +190,7 @@
                 <h3><b> Simulim </b></h3>
               </div>
             </li>
-            <span class="time" aria-hidden="true">Event date to be announced</span>
+            <span class="time" aria-hidden="true">MCQ round - 19th March (3PM-4PM) & PS round - 20th March (10AM-10PM)</span>
           </ul>
         </div>
       </div>
@@ -241,7 +241,7 @@
                 <h3><b> Consilium </b></h3>
               </div>
             </li>
-            <span class="time" aria-hidden="true">Event date to be announced</span>
+            <span class="time" aria-hidden="true">Round 1 - 16th 10AM to 18th 11:59PM & Quiz - 16th (6:30PM-6:55PM) & Simulation - 16th (6:30PM - 11:55PM) & Round 2 - 19th 10AM to 21st 11:59PM </span>
           </ul>
         </div>
       </div>
