--- a/templates/events/consilium.html
+++ b/templates/events/consilium.html
@@ -12,9 +12,11 @@
       <div class="col-12 col-md-7 order-2 order-md-1 details">
         <hr class="d-none d-md-block bg-secondary">
         <div>
-          <p class="font-weight-light mt-2 mb-0"><span class="font-weight-bold" style="color:#e5707e">Date:</span>
-            To be announced</p>
-          <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">Time:</span> To be announced
+          <p class="font-weight-light mt-2 mb-0"><span class="font-weight-bold" style="color:#e5707e">Round 1:</span>
+            16th Mar(10AM)- 18th Mar(11:59PM) </p>
+          <p class="font-weight-light mt-2 mb-0"><span class="font-weight-bold" style="color:#e5707e">Quiz & Simulation:</span>
+            Quiz: 16th Mar(6:30PM-6:55PM) & Simulation: 16th Mar(6:30PM- 11:55PM)</p>
+          <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">Round 2:</span>19th Mar(10AM) - 21st Mar(11:59PM)
           </p>
           <p class="font-weight-light mb-3"><span class="font-weight-bold" style="color:#e5707e">Team size:</span>
             1 - 2</p>
@@ -32,7 +34,7 @@
             electronics concepts.
         </p>
         <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-          href="#">Problem Statement (Coming Soon)</a></span>
+          href="https://drive.google.com/file/d/1TM-6UFFYwdaQjpIVwvWr86oYb-daKM4m/view?usp=sharing">Problem Statement 1</a></span>
         <span><a class="btn btn-outline-info btn-md mt-4 px-3 rounded-0 no-btn-shadow"
           href="{% url 'event_registration:register' 'Consilium' %}">
           Register
