--- a/templates/events/cryptx.html
+++ b/templates/events/cryptx.html
@@ -12,12 +12,9 @@
       <div class="col-12 col-md-7 order-2 order-md-1 details">
         <hr class="d-none d-md-block bg-secondary">
         <div>
-          <p class="font-weight-light mt-2 mb-0"><span class="font-weight-bold" style="color:#e5707e">Date:</span>
-            To be announced</p>
-          <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">Time:</span> To be announced
-          </p>
-          <p class="font-weight-light mb-3"><span class="font-weight-bold" style="color:#e5707e">Team size:</span>
-            1</p>
+          <p class="font-weight-light mt-2 mb-0"><span class="font-weight-bold" style="color:#e5707e">MCQ Round: </span>18th March (6PM-7PM)</p>
+          <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">PS Round: </span>20th March 10PM - 21st March 10PM</p>
+          <p class="font-weight-light mb-3"><span class="font-weight-bold" style="color:#e5707e">Team size: </span>1</p>
         </div>
         <hr class="d-none d-md-block bg-secondary">
       </div>
