--- a/templates/events/codigo.html
+++ b/templates/events/codigo.html
@@ -13,12 +13,9 @@
       <div class="col-12 col-md-7 order-2 order-md-1 details">
         <hr class="d-none d-md-block bg-secondary">
         <div>
-          <p class="font-weight-light mt-2 mb-0"><span class="font-weight-bold" style="color:#e5707e">Round 1: </span>19th March (7PM-10PM)
-            </p>
-          <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">Round 2: </span>20th March (7PM-10PM)
-          </p>
-          <p class="font-weight-light mb-3"><span class="font-weight-bold" style="color:#e5707e">Team size:</span>
-            1</p>
+          <p class="font-weight-light mt-2 mb-0"><span class="font-weight-bold" style="color:#e5707e">Round 1: </span>19th March (7PM-10PM)</p>
+          <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">Round 2: </span>20th March (7PM-10PM)</p>
+          <p class="font-weight-light mb-3"><span class="font-weight-bold" style="color:#e5707e">Team size: </span>1</p>
         </div>
         <hr class="d-none d-md-block bg-secondary">
       </div>
