--- a/templates/prastuti/schedule.html
+++ b/templates/prastuti/schedule.html
@@ -98,7 +98,7 @@
               <a href="https://drive.google.com/file/d/1wnedsJDiVys1uPBYAMK3L_hdkoUSOOsG/view?usp=sharing" target="_blank">Symmetric Cryptography</a>
             </li>
             <li>
-              <a href="#" target="_blank">Asymmetric Cryptography</a>
+              <a href="https://drive.google.com/file/d/19ZWkKxs0UN6jBE85edjhSKQ3oYdYu-TR/view?usp=sharing" target="_blank">Asymmetric Cryptography</a>
             </li>
           </ul>
         </div>
@@ -262,7 +262,7 @@
               <a href="https://drive.google.com/file/d/1FiuTHo5ACAr87JXTlmlUuHo7Hrw6XAyI/view?usp=sharing" target="_blank">Types of Flip Flops</a>
             </li>
             <li>
-              <a href="#" target="_blank">Finite State Machine</a>
+              <a href="https://drive.google.com/file/d/1bHNP0GvqDlPABZWBJuiyIICoFYYOPLOJ/view?usp=sharing" target="_blank">Finite State Machine</a>
             </li>
           </ul>
         </div>
