--- a/templates/events/consilium.html
+++ b/templates/events/consilium.html
@@ -77,7 +77,7 @@
             </p>
           </li>
           <li>
-            <a href="#" target="_blank" class="workshop_link">
+            <a href="https://drive.google.com/drive/folders/1ik_wrfGfnMuwzv1tUOhYuMUDXuxlgrOF" target="_blank" class="workshop_link">
               <h4 style="font-family: 'Russo One', sans-serif;">Finite State Machine</h4>
             </a>
             <p style="font-family: 'Monda', sans-serif;color:#cdd0cb;">Finite State Machines, Mealy and Moore State Machine, State reduction and Counters
