--- a/templates/events/consilium.html
+++ b/templates/events/consilium.html
@@ -35,6 +35,10 @@
         </p>
         <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
           href="https://drive.google.com/file/d/1avF4mN4nmEN42M1ur909yj6iiBENSdvM/view?usp=sharing">Problem Statement 1</a></span>
+        <span><a class="btn btn-success btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
+          href="https://forms.gle/XTeHSb7eqsa7Vpff9">Quiz@6:30PM</a></span>
+        <span><a class="btn btn-success btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
+          href="https://forms.gle/VCrbCp7qp12eVE5m7">Simulation Assgn.</a></span>
         <span><a class="btn btn-outline-info btn-md mt-4 px-3 rounded-0 no-btn-shadow"
           href="{% url 'event_registration:register' 'Consilium' %}">
           Register
