--- a/templates/events/consilium.html
+++ b/templates/events/consilium.html
@@ -15,7 +15,7 @@
           <p class="font-weight-light mt-2 mb-0"><span class="font-weight-bold" style="color:#e5707e">Round 1:</span>
             16th March (10AM)- 18th March (11:59PM) </p>
           <p class="font-weight-light mt-2 mb-0"><span class="font-weight-bold" style="color:#e5707e">Quiz & Simulation:</span>
-            Quiz: 16th March (6:30PM-6:55PM) & Simulation: 16th March (6:30PM- 11:55PM)</p>
+            Quiz: 16th March (6:30PM-6:55PM) & Simulation: 16th March (6:55PM- 11:55PM)</p>
           <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">Round 2: </span>19th March (10AM) - 21st March (11:59PM)
           </p>
           <p class="font-weight-light mb-3"><span class="font-weight-bold" style="color:#e5707e">Team size:</span>
@@ -35,10 +35,13 @@
         </p>
         <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
           href="https://drive.google.com/file/d/1avF4mN4nmEN42M1ur909yj6iiBENSdvM/view?usp=sharing">Problem Statement 1</a></span>
+        
         <span><a class="btn btn-success btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-          href="https://forms.gle/XTeHSb7eqsa7Vpff9">Quiz@6:30PM</a></span>
+          href="https://forms.gle/XTeHSb7eqsa7Vpff9">Quiz (6:30PM - 6:55PM)</a></span>
+        
         <span><a class="btn btn-success btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-          href="https://forms.gle/VCrbCp7qp12eVE5m7">Simulation Assgn.</a></span>
+          href="https://forms.gle/VCrbCp7qp12eVE5m7">Simulation (6:55PM - 11:55PM)</a></span>
+        
         <span><a class="btn btn-outline-info btn-md mt-4 px-3 rounded-0 no-btn-shadow"
           href="{% url 'event_registration:register' 'Consilium' %}">
           Register
