--- a/templates/events/simulim.html
+++ b/templates/events/simulim.html
@@ -13,7 +13,7 @@
         <hr class="d-none d-md-block bg-secondary">
         <div>
           <p class="font-weight-light mt-2 mb-0"><span class="font-weight-bold" style="color:#e5707e">MCQ Round: </span>19th March (3PM-4PM)</p>
-          <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">PS Round: </span>20th March 10PM - 21st March 10PM</p>
+          <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">PS Round: </span>20th March (10AM - 11:59PM)</p>
           <p class="font-weight-light mb-3"><span class="font-weight-bold" style="color:#e5707e">Team size:</span>
             1</p>
         </div>
