--- a/templates/events/cryptx.html
+++ b/templates/events/cryptx.html
@@ -33,6 +33,8 @@
         </p>
         <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
           href="#">Problem Statement (Coming Soon)</a></span>
+        <span><a class="btn btn-success btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
+          href="https://forms.gle/sSmtWogKtm8vx4DG6">MCQ Quiz @6PM</a></span>
         <span><a class="btn btn-outline-info btn-md mt-4 px-3 rounded-0 no-btn-shadow"
           href="{% url 'event_registration:register' 'CryptX' %}">
           Register
