--- a/templates/events/codigo.html
+++ b/templates/events/codigo.html
@@ -79,6 +79,7 @@
           <li><h4><span style="font-family: 'Russo One', sans-serif;">Chowdepalli Rajeshwar Reddy - <a href="tel:9440033545">9440033545</a></span></h4></li>
           <li><h4><span style="font-family: 'Russo One', sans-serif;">Pradyumn Singh - <a href="tel:9559575465">9559575465</a></span></h4></li>
           <li><h4><span style="font-family: 'Russo One', sans-serif;">Saurabh Singh Tiwari - <a href="tel:7024452828">7024452828</a></span></h4></li>
+          <li><h4><span style="font-family: 'Russo One', sans-serif;">Gurankit Pal Singh - <a href="tel:7024452828">8506030540</a></span></h4></li>
       </ul>
       </div>
     </div>
