--- a/templates/events/cryptx.html
+++ b/templates/events/cryptx.html
@@ -12,7 +12,7 @@
       <div class="col-12 col-md-7 order-2 order-md-1 details">
         <hr class="d-none d-md-block bg-secondary">
         <div>
-          <p class="font-weight-light mt-2 mb-0"><span class="font-weight-bold" style="color:#e5707e">MCQ Round: </span>18th March (6PM-7PM)</p>
+          <p class="font-weight-light mt-2 mb-0"><span class="font-weight-bold" style="color:#e5707e">Quiz Round: </span>18th March (6PM-7PM)</p>
           <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">PS Round: </span>20th March 10PM - 21st March 10PM</p>
           <p class="font-weight-light mb-3"><span class="font-weight-bold" style="color:#e5707e">Team size: </span>1</p>
         </div>
@@ -34,7 +34,7 @@
         <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
           href="#">Problem Statement (Coming Soon)</a></span>
         <span><a class="btn btn-success btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-          href="https://forms.gle/sSmtWogKtm8vx4DG6">MCQ Quiz @6PM</a></span>
+          href="https://forms.gle/sSmtWogKtm8vx4DG6">Quiz @6PM</a></span>
         <span><a class="btn btn-outline-info btn-md mt-4 px-3 rounded-0 no-btn-shadow"
           href="{% url 'event_registration:register' 'CryptX' %}">
           Register
