--- a/templates/prastuti/schedule.html
+++ b/templates/prastuti/schedule.html
@@ -77,7 +77,7 @@
                 <h3><b> CryptX </b></h3>
               </div>
             </li>
-            <span class="time" aria-hidden="true">MCQ round - 18th March (6PM-7PM) & PS round - 20th March 10PM to 21st March 10PM</span>
+            <span class="time" aria-hidden="true">Quiz round - 18th March (6PM-7PM) & PS round - 20th March 10PM to 21st March 10PM</span>
           </ul>
         </div>
       </div>
