--- a/templates/events/recognizance.html
+++ b/templates/events/recognizance.html
@@ -12,7 +12,7 @@
       <div class="col-12 col-md-7 order-2 order-md-1 details">
         <hr class="d-none d-md-block bg-secondary">
         <div>
-          <p class="font-weight-light mt-2 mb-0"><span class="font-weight-bold" style="color:#e5707e">Round 1: </span>17th March 10AM - 18th March 11:59PM</p>
+          <p class="font-weight-light mt-2 mb-0"><span class="font-weight-bold" style="color:#e5707e">Round 1: </span>17th March 10AM - 19th March 11:59PM</p>
           <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">Round 2: </span>19th March 10AM - 20th March 11:59PM</p>
           <p class="font-weight-light mb-3"><span class="font-weight-bold" style="color:#e5707e">Team size: </span>1 - 2</p>
         </div>
@@ -33,7 +33,7 @@
                 and NLP. To top it off it would be competition to squeeze out the least error 
                 and highest accuracy.<br><br>And may the Gradients be with you.</p>
           <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-            href="https://www.kaggle.com/c/recognizance-1/">Problem Statement 1</a></span>
+            href="https://www.kaggle.com/c/recognizance-1/">Problem Statement 1 (Deadline extended)</a></span>
           <span><a class="btn btn-outline-info btn-md mt-4 px-3 rounded-0 no-btn-shadow"
             href="{% url 'event_registration:register' 'Recognizance' %}">
             Register
