--- a/templates/prastuti/schedule.html
+++ b/templates/prastuti/schedule.html
@@ -134,7 +134,7 @@
                 <h3><b> RECOGNIZANCE </b></h3>
               </div>
             </li>
-            <span class="time" aria-hidden="true">Round 1 - 17th March 10AM to 19th March 11:59PM & Round 2 - 19th March 10AM to 20th March 11:59PM</span>
+            <span class="time" aria-hidden="true">PS 1 - 17th March 10AM to 19th March 11:59PM & PS 2 - 19th March 10AM to 20th March 11:59PM</span>
           </ul>
         </div>
       </div>
