--- a/templates/events/consilium.html
+++ b/templates/events/consilium.html
@@ -13,10 +13,10 @@
         <hr class="d-none d-md-block bg-secondary">
         <div>
           <p class="font-weight-light mt-2 mb-0"><span class="font-weight-bold" style="color:#e5707e">Round 1:</span>
-            16th March (10AM)- 18th March (11:59PM) </p>
+            16th March (10AM)- 19th March (2:55PM) </p>
           <p class="font-weight-light mt-2 mb-0"><span class="font-weight-bold" style="color:#e5707e">Quiz & Simulation:</span>
             Quiz: 16th March (6:30PM-6:55PM) & Simulation: 16th March (6:55PM- 11:55PM)</p>
-          <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">Round 2: </span>19th March (10AM) - 21st March (11:59PM)
+          <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">Round 2: </span>19th March (3PM) - 21st March (11:59PM)
           </p>
           <p class="font-weight-light mb-3"><span class="font-weight-bold" style="color:#e5707e">Team size:</span>
             1 - 2</p>
