--- a/templates/events/recognizance.html
+++ b/templates/events/recognizance.html
@@ -34,6 +34,8 @@
                 and highest accuracy.<br><br>And may the Gradients be with you.</p>
           <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
             href="https://www.kaggle.com/c/recognizance-1/">Problem Statement 1 (Deadline extended)</a></span>
+        <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
+            href="https://www.kaggle.com/c/recognizance-2">Problem Statement 2</a></span>
           <span><a class="btn btn-outline-info btn-md mt-4 px-3 rounded-0 no-btn-shadow"
             href="{% url 'event_registration:register' 'Recognizance' %}">
             Register
