--- a/templates/events/simulim.html
+++ b/templates/events/simulim.html
@@ -31,6 +31,8 @@
            simulation modelling provides valuable solutions by giving clear insights into complex systems.</p>
            <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
             href="#">Problem Statement (Coming Soon)</a></span>
+        <span><a class="btn btn-success btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
+            href="https://forms.gle/WfCTrGzZUnA52HMQ6">Quiz @3PM</a></span>
           <span><a class="btn btn-outline-info btn-md mt-4 px-3 rounded-0 no-btn-shadow"
             href="{% url 'event_registration:register' 'Simulim' %}">
             Register
