--- a/templates/events/consilium.html
+++ b/templates/events/consilium.html
@@ -34,7 +34,9 @@
             electronics concepts.
         </p>
         <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-          href="https://drive.google.com/file/d/1avF4mN4nmEN42M1ur909yj6iiBENSdvM/view?usp=sharing">Problem Statement 1 (Deadline Extended)</a></span>
+          href="https://drive.google.com/file/d/1avF4mN4nmEN42M1ur909yj6iiBENSdvM/view?usp=sharing">Problem Statement 1</a></span>
+        <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
+          href="https://drive.google.com/file/d/1vg1Mniz9XtmkO1yGjbtsA9LtbtQt0oIo/view?usp=sharing">Problem Statement 2</a></span>
         
         <span><a class="btn btn-outline-info btn-md mt-4 px-3 rounded-0 no-btn-shadow"
           href="{% url 'event_registration:register' 'Consilium' %}">
