--- a/templates/events/codigo.html
+++ b/templates/events/codigo.html
@@ -29,8 +29,10 @@
             The main focus will be on important data structures and algorithms used in problem solving.
             The event will be organised on HackerRank.<br><br> Happy Coding.
         </p>
-        <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-          href="#">Problem Statement (Coming Soon)</a></span>
+        <span><a class="btn btn-success btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
+          href="https://www.hackerrank.com/codigo-round-1">Contest 1</a></span>
+        <span><a class="btn btn-success btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
+          href="https://www.hackerrank.com/codigo-round-2">Contest 2</a></span>
         <span><a class="btn btn-outline-info btn-md mt-4 px-3 rounded-0 no-btn-shadow"
           href="{% url 'event_registration:register' 'Codigo' %}">
           Register
