--- a/templates/events/codigo.html
+++ b/templates/events/codigo.html
@@ -32,7 +32,7 @@
         <span><a class="btn btn-success btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
           href="https://www.hackerrank.com/codigo-round-1">Contest 1</a></span>
         <span><a class="btn btn-success btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-          href="https://www.hackerrank.com/codigo-round-2">Contest 2</a></span>
+          href="https://www.hackerrank.com/codigo-round-2-1">Contest 2</a></span>
         <span><a class="btn btn-outline-info btn-md mt-4 px-3 rounded-0 no-btn-shadow"
           href="{% url 'event_registration:register' 'Codigo' %}">
           Register
