--- a/templates/prastuti/schedule.html
+++ b/templates/prastuti/schedule.html
@@ -23,7 +23,8 @@
                 <h3><b> Codigo </b></h3>
               </div>
             </li>
-            <span class="time" aria-hidden="true">2 Contests - 19th March (7PM-10PM) & 20th March (7PM-10PM) </span>
+            <span class="time" aria-hidden="true"><a href="https://www.hackerrank.com/codigo-round-1" target="_blank">Round-1  19th March (7PM-10PM)</a></span> 
+            <span class="time" aria-hidden="true"><a href="https://www.hackerrank.com/codigo-round-2-1" target="_blank">Round-2 20th March (7PM-10PM)</a></span> 
           </ul>
         </div>
       </div>
