--- a/templates/events/simulim.html
+++ b/templates/events/simulim.html
@@ -13,7 +13,7 @@
         <hr class="d-none d-md-block bg-secondary">
         <div>
           <p class="font-weight-light mt-2 mb-0"><span class="font-weight-bold" style="color:#e5707e">MCQ Round: </span>19th March (3PM-4PM)</p>
-          <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">PS Round: </span>20th March (10AM - 11:59PM)</p>
+          <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">PS Round: </span>20th March 12PM - 21st March 12PM)</p>
           <p class="font-weight-light mb-3"><span class="font-weight-bold" style="color:#e5707e">Team size:</span>
             1</p>
         </div>
@@ -30,7 +30,7 @@
            analysis which is easily verified, communicated and understood. Across industries and disciplines, 
            simulation modelling provides valuable solutions by giving clear insights into complex systems.</p>
            <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-            href="#">Problem Statement (Coming Soon)</a></span>
+            href="https://drive.google.com/file/d/1qXSLprJswMJemUI_bcy_Q8BnoDmmwAVW/view?usp=sharing">Problem Statement</a></span>
         <span><a class="btn btn-success btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
             href="https://forms.gle/WfCTrGzZUnA52HMQ6">Quiz @3PM</a></span>
           <span><a class="btn btn-outline-info btn-md mt-4 px-3 rounded-0 no-btn-shadow"
