--- a/templates/prastuti/schedule.html
+++ b/templates/prastuti/schedule.html
@@ -191,7 +191,7 @@
                 <h3><b> Simulim </b></h3>
               </div>
             </li>
-            <span class="time" aria-hidden="true">MCQ round - 19th March (3PM-4PM) & PS round - 20th March (10AM-11:59PM)</span>
+            <span class="time" aria-hidden="true">MCQ round - 19th March (3PM-4PM) & PS round - 20th March 12PM- 21st March 12PM</span>
           </ul>
         </div>
       </div>
