--- a/templates/events/cryptx.html
+++ b/templates/events/cryptx.html
@@ -13,7 +13,7 @@
         <hr class="d-none d-md-block bg-secondary">
         <div>
           <p class="font-weight-light mt-2 mb-0"><span class="font-weight-bold" style="color:#e5707e">Quiz Round: </span>18th March (6PM-7PM)</p>
-          <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">PS Round: </span>20th March 10PM - 21st March 10PM</p>
+          <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">CTF Round: </span>20th March 10PM - 21st March 10PM</p>
           <p class="font-weight-light mb-3"><span class="font-weight-bold" style="color:#e5707e">Team size: </span>1</p>
         </div>
         <hr class="d-none d-md-block bg-secondary">
@@ -31,10 +31,10 @@
           in the realm of cryptography. It is a CTF style event where a string a.k.a FLAG is expected to be submitted 
           as the challenge’s solution.<br><br>FLAG format :  cryptX{th1s_1s_a_fl4g}<br>Happy Hacking ;)
         </p>
-        <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-          href="#">Problem Statement (Coming Soon)</a></span>
         <span><a class="btn btn-success btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-          href="https://forms.gle/sSmtWogKtm8vx4DG6">Quiz @6PM</a></span>
+          href="http://18.212.107.34/">CTF</a></span>
+        <span><a class="btn btn-success btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
+          href="https://forms.gle/sSmtWogKtm8vx4DG6">Quiz</a></span>
         <span><a class="btn btn-outline-info btn-md mt-4 px-3 rounded-0 no-btn-shadow"
           href="{% url 'event_registration:register' 'CryptX' %}">
           Register
