--- a/templates/events/consilium.html
+++ b/templates/events/consilium.html
@@ -16,7 +16,7 @@
             16th March (10AM)- 19th March (2:55PM) </p>
           <p class="font-weight-light mt-2 mb-0"><span class="font-weight-bold" style="color:#e5707e">Quiz & Simulation:</span>
             Quiz: 16th March (6:30PM-6:55PM) & Simulation: 16th March (6:55PM- 11:55PM)</p>
-          <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">Round 2: </span>19th March (3PM) - 21st March (11:59PM)
+          <p class="font-weight-light mb-0"><span class="font-weight-bold" style="color:#e5707e">Round 2: </span>19th March (3PM) - 22nd March (10:00PM)
           </p>
           <p class="font-weight-light mb-3"><span class="font-weight-bold" style="color:#e5707e">Team size:</span>
             1 - 2</p>
@@ -36,7 +36,7 @@
         <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
           href="https://drive.google.com/file/d/1avF4mN4nmEN42M1ur909yj6iiBENSdvM/view?usp=sharing">Problem Statement 1</a></span>
         <span><a class="btn btn-outline-danger btn-md mt-4 px-3 rounded-0 no-btn-shadow " data-tilt target="_blank"
-          href="https://drive.google.com/file/d/1vg1Mniz9XtmkO1yGjbtsA9LtbtQt0oIo/view?usp=sharing">Problem Statement 2</a></span>
+          href="https://drive.google.com/file/d/1vg1Mniz9XtmkO1yGjbtsA9LtbtQt0oIo/view?usp=sharing">Problem Statement 2 (Deadline Extended)</a></span>
         
         <span><a class="btn btn-outline-info btn-md mt-4 px-3 rounded-0 no-btn-shadow"
           href="{% url 'event_registration:register' 'Consilium' %}">
